style.css
/* CSS For Odin Landing Page */

/* Attatchments */
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');



/* Root */


:root {
    --PrimaryColor1: #1f2937;
    --PrimaryColor2: #e5e7eb;
    --PrimaryColor3: #3882f6;
}


/* General CSS */

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    line-height: 1.5;
    font-size: 20px;
    font-family: 'Roboto', sans-serif;
}

.container {
    margin: 0 auto;
}


img {
    max-height: 100%;
    width: auto;
}



/* Group Selectors*/

.navbar,
.header {
    background-color: var(--PrimaryColor1);
    color: var(--PrimaryColor2);
}



/* Navigation Bar*/

.navbar {
    height: 90px;
}

.navbar .container {
    max-width: 70vmax;
    display: flex;
    justify-content: space-between;
    align-items: center;
    height: 100%;
}

.navbar a {
    text-decoration: none;  
    color: var(--PrimaryColor2);
}

.navbar .container ul {
    display: flex;
    list-style-type: none;
    width: 450px;
    font-size: large;
    justify-content: space-between;
    /*
    border-style: solid;
    border-color: #fff;
    */
}

.navbar .container ul li {
    padding: 10px 10px 10px 10px;
    /*
    border-style: solid;
    border-color: #fff;
    */
}

.navbar .container ul li:hover {
    color: var(--PrimaryColor3);
    border-style: solid;
    border: 0px 0px 0px 0px;
    border-width: 0px 0px 3px 0px;
    border-radius: 5px;
    border-color: var(--PrimaryColor2);
    background-color: var(--PrimaryColor3);
}

.navbar .container .logo {
    font-size: x-large;
    font-weight: 900;
    width: 200px;
    /*
    border-style: solid;
    border-color: #fff;
    */
}

/* Header CSS*/

